Unified "importUsers" and "importGroups"